# StreamFlow-Finance-Monitoring

./: .gitignore  README.md  pyproject.toml  requirements-test.txt  requirements.txt
dags/: main_pipeline_dag.py
data/raw/finance/crypto/binance/btc_usdt/dt=2026-01-31/: btc_usdt_1min.jsonl
dbt/btc_nasdaq/: .user.yml  dbt_project.yml  profiles.yml
dbt/btc_nasdaq/models/marts/: mart_btc_ndx_5m_aligned.sql  mart_btc_ndx_5m_aligned.yml  mart_btc_ndx_5m_enriched.sql  mart_btc_ndx_5m_enriched.yml
dbt/btc_nasdaq/models/stagging/: sources.yml  stg_btc_ndx_features_5m_dbt.sql  stg_btc_ndx_features_5m_dbt.yml
docker/: .env.example  compose.yml  init-warehouse.sql  requirements.txt
docker/airflow/: Dockerfile  requirements.txt
docs/: TECHNICAL_STACK.html  TECHNICAL_STACK.md
draft_works/: elk_welcome.py
notebooks/: data.ipynb
src/indexing/: elk_indexing.py  index_usage_to_elastic.py
src/ingestion/: api.py  binance_btc_usdt.py  yahoo_finance.py
src/postgres/: load.py
src/spark_jobs/combination/: features_lead_lag_spark.py
src/spark_jobs/export/: load_to_warehouse.py
src/spark_jobs/formatting/: format_binance_spark.py  format_yahoo_finance_spark.py
src/utils/: __init__.py  date_func.py
tests/: conftest.py  requirements-test.txt  test_export.py  test_features_lead_lag.py  test_ingestion.py  test_spark_formatting.py  test_utils.py
